--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -19,38 +19,127 @@ html{
   }
 
  
-  .one{
-      height: 80vh;
+  .intro{
       display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr;
-      padding: 0 10rem;
-      background-color: #f4f4f4;
-      position: relative;
-      overflow: hidden;
-      &__left{
-          grid-column: 1/2;
+      width: 100vw;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(3, auto);
+      @include media("<=phone"){
+        grid-template-columns: 1fr;
+      }
+
+      &__one{
+          grid-column: 1/3;
           grid-row: 1/2;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          button{
-              width: 18rem;
+          height: 80vh;
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          grid-template-rows: 1fr;
+          background-color: #f4f4f4;
+          @include media("<=tablet"){
+            height: 60vh;
           }
-        &>:not(:last-child){
-            padding-bottom: 4rem;
+          @include media("<=phone"){
+            grid-template-columns: 1fr;
+            grid-row: 1fr 1fr;
+            height: 90vh;
+          }
+        &-left{
+            grid-row: 1/2;
+            grid-column: 1/2;
+            @include media("<=phone"){
+                grid-row: 2/3;
+                
+              }
+            header{
+                padding: 5rem 0 5rem 10rem;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+               
+                @include media("<=phone"){
+                    padding: 15rem 8rem;
+                    height: 90vh;
+                    align-items: center;
+                    text-align: center;
+                    margin-top: 23%;
+                  }
+                
+                h1{
+                    font-size: 5rem;
+                    text-transform: capitalize;
+                    font-weight: 100;
+                    color: $main-font-color;
+                    @include media("<=tablet"){
+                        font-size: 3.5rem;
+                      }
+                }
+                p{
+                    font-size: 1.8rem;
+                    font-weight: 100;
+                    color: $secondary-font-color;
+                    @include media("<=tablet"){
+                        font-size: 1.2rem;
+                      }
+                }
+                button{
+                    width: 35%;
+                    @include media("<=tablet"){
+                        width: 60%;
+                      }
+                }
+            }
+        }
+        &-right{
+            grid-row: 1/2;
+            grid-column: 2/3;
+            overflow: hidden;
+            position: relative;
+            @include media("<=phone"){
+                grid-column: 1/2;
+                grid-row: 1/2;
+                overflow-y: visible;
+              }
+            img{
+                position: absolute;
+                width: 150%;
+                top: -40%;
+                left: -8%;
+                @include media("<=phone"){
+                    width: 200%;
+                    top: -80%;
+                    left: -30%;
+                  }
+            }
         }
       }
-      &__right{
-          grid-row: 1/2;
+      &__two{
           grid-column: 2/3;
-          background-image: url('../../images/bg-intro-desktop.svg');
-          margin: -25rem -10rem 0 0;
-          
-           
+          grid-row: 1/3;
+          overflow: hidden;
+          position: relative;
+          @include media("<=phone"){
+            grid-column: 1/2;
+            grid-row: 1/3;
+            overflow-y: visible;
+          }
+          img{
+              position: absolute;
+              top: -10%;
+              right: -20%;
+              width: 100%;
+              @include media("<=phone"){
+                top: 5%;
+                left: 50%;
+                transform: translate(-50%,-50%);
+                width: 65%;
+              }
+          }
       }
-  }
- 
-  .main-img{
- 
+      &__three{
+          grid-row: 2/3;
+          grid-column: 1/3;
+          height: 100vh;
+          z-index: -2;
+      }
   }
