--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -49,22 +49,21 @@ html{
             grid-column: 1/2;
             @include media("<=phone"){
                 grid-row: 2/3;
-                
               }
             header{
-                padding: 5rem 0 5rem 10rem;
+                padding: 10rem 0 0 10rem;
                 display: flex;
-                flex-direction: column;
-                justify-content: space-evenly;
-               
+                flex-direction: column; 
                 @include media("<=phone"){
-                    padding: 15rem 8rem;
+                    padding: 15rem 2rem;
                     height: 90vh;
                     align-items: center;
                     text-align: center;
                     margin-top: 23%;
                   }
-                
+                  &>:not(:last-child){
+                    padding-bottom: 5rem;
+                  }
                 h1{
                     font-size: 5rem;
                     text-transform: capitalize;
@@ -78,6 +77,7 @@ html{
                     font-size: 1.8rem;
                     font-weight: 100;
                     color: $secondary-font-color;
+                    line-height: 2;
                     @include media("<=tablet"){
                         font-size: 1.2rem;
                       }
@@ -139,7 +139,87 @@ html{
       &__three{
           grid-row: 2/3;
           grid-column: 1/3;
-          height: 100vh;
+          min-height: 100vh;
           z-index: -2;
+          padding: 10rem;
+          display: grid;
+          grid-template-columns: 2fr 1fr;
+          grid-template-rows: 1fr 2fr;
+          @include media("<=tablet"){
+            padding: 0 8rem;
+            grid-column: 1fr;
+            grid-row: auto auto;
+            justify-self: center;
+            text-align: center;
+          }
+          &-top{
+            grid-column: 1/2;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            @include media("<=tablet"){
+              justify-content: space-evenly;
+              grid-column: 1/3;
+            }
+            h2{
+              font-size: 4rem;
+              text-transform: capitalize;
+              font-weight: 100;
+              color: $main-font-color;
+            }
+            p{
+              font-size: 1.8rem;
+              font-weight: 100;
+              color: $secondary-font-color;
+              line-height: 2;
+            }
+          }
+          &-bottom{
+            grid-column: 1/3;
+            display: flex;
+            padding-top: 5rem;
+            @include media("<=tablet"){
+              flex-direction: column;
+            }
+
+            .container{
+              display: flex;
+              flex-direction: column;
+              justify-content: space-between;
+              .info{
+                @include media("<=tablet"){
+                  width: 100%;
+                }
+              }
+              h6{
+                font-size: 2rem;
+                text-transform: capitalize;
+                font-weight: 100;
+                color: $main-font-color;
+              }
+              p{
+                font-size: 1.3rem;
+                font-weight: 100;
+                color: $secondary-font-color;
+                line-height: 2;
+              }
+              &:not(:last-child){
+                padding-right: 4rem;
+                @include media("<=tablet"){
+                  padding-right: 0;
+                }
+                
+              }
+              &>:not(:last-child){
+                @include media("<=tablet"){
+                  padding: 0 0 4rem 0;
+                }
+              }
+              @include media("<=tablet"){
+                padding: 0 0 8rem 0;
+              }
+            }
+
+          }
       }
   }
